# bevy_abm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  births.json  pyproject.toml
.github/workflows/: tests.yml
python/: analysis.ipynb
python/bevy_abm/: __init__.py
python/pybevy_demog/: __init__.py
python/tests/: test_pybevy_demog.py
src/: config.rs  events.rs  gestation.rs  household.rs  individual.rs  lib.rs  main.rs  partner.rs  python.rs  window.rs
tests/: test_gestation_duration.rs  test_partner_gestation.rs  test_partner_seeking.rs
