[package]
name = "bevy_abm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
rand = "0.8"
approx = "0.5.1"

[features]
# no features by default
default = []

# add "headless" feature
headless = []