[package]
name = "bevy_abm"
version = "0.1.0"
edition = "2021"

[lib]
name = "pybevy_demog"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy_egui = { version = "0.27", default-features = false, features = ["render", "default_fonts"] }
rand = "0.8"
approx = "0.5.1"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
# no features by default
default = []

# add "headless" feature
headless = []

# add "python" feature for PyO3 bindings
python = ["pyo3"]