[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pybevy-demog"
version = "0.1.0"
description = "Demographic simulation using Bevy ECS, callable from Python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["python"]
module-name = "pybevy_demog"
